--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 :root{
 	--prim: #242F40;
 	--scnd: #7D8491;
-	--tert: #FC73C5;
+	--tert: #FD9BD6;
 	--quat: #FFFFFF;
-	--quin: #FC73C5;
-	/*--quin: #16F3F3;*/
+	/*--quin: #FD9BD6;*/
+	--quin: #16F3F3;
 }
 
 #titleArea{
@@ -53,17 +53,20 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	width: 95vw;
+	max-width: 1000px;
 	box-sizing: border-box;
 	background: var(--scnd);
 	border-radius: 10px;
 	padding: 1em;
 	justify-content: space-around;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .quick{
-	width: 20vw;
-	background: var(--quin);
-	height: 20vw;
+	width: 20%;
+	background: var(--tert);
+	height: 20%;
 	margin: 1vw;
 	border-radius: 20px;
 	text-align: center;
@@ -96,7 +99,7 @@ h2{
 }
 
 a{
-	background: var(--quin);
+	background: var(--tert);
 	border-radius: 10px;
 	color: var(--prim);
 	box-shadow: 4px 4px 6px var(--prim);
@@ -113,5 +116,6 @@ html{
 }
 
 a:hover{
-	filter: invert(1);
+	/*filter: invert(1);*/
+	background: var(--quin);
 }
