--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 :root{
-	--prim: #242F40;
+	/*--prim: #242F40;*/
+	--prim: #202937;
 	--scnd: #7D8491;
 	--tert: #FD9BD6;
 	--quat: #FFFFFF;
@@ -38,13 +39,13 @@
 	height: 50px;
 }
 
+#githubButton img{
+	filter: brightness(17.1) hue-rotate(217deg) saturation(26.4%);
+}
+
 #linkedInButton{
 	width: 175px;
 	height: 50px;
-}
-
-#linkedInButton img{
-	filter: brightness(0) invert(1);
 }
 
 #contentArea{
@@ -80,7 +81,7 @@ body{
 
 h1, h2{
 	margin: 0;
-	color: var(--quat);
+	color: var(--prim);
 	background: var(--tert);	
 	border-radius: 10px;
 	box-sizing: content-box;
@@ -122,4 +123,23 @@ html{
 a:hover{
 	/*filter: invert(1);*/
 	background: var(--quin);
+}
+
+@media only screen and (max-width: 900px){
+	#title{
+		width: 100%;
+		margin-left: 0;
+	}
+
+	#subtitle{
+		width: auto;
+	}
+
+	#githubButton{
+		width: 50px
+	}
+
+	#linkedInButton{
+		width: 50px;
+	}
 }
