--- a/css/main.css
+++ b/css/main.css
@@ -48,31 +48,35 @@
 	height: 50px;
 }
 
-#contentArea{
+.contentArea{
 	margin: 2.5vw;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
 	width: 95vw;
+	margin-left: auto;
+	margin-right: auto;
 	max-width: 1000px;
 	box-sizing: border-box;
 	background: var(--scnd);
 	border-radius: 10px;
 	padding: 1em;
+}
+
+#quickLinks{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: space-around;
-	margin-left: auto;
-	margin-right: auto;
 	align-items: center;
 }
 
 .quick{
-	width: 20%;
+	/*width: 20%;*/
 	background: var(--tert);
 	height: 20%;
 	margin: 1vw;
 	border-radius: 20px;
 	text-align: center;
 	overflow: hidden;
+	width: 185px;
 }
 
 body{
@@ -99,6 +103,26 @@ h1{
 
 h2{
 	padding: 4px;
+}
+
+h3{
+	background-color: var(--tert);
+	color: var(--prim);
+	display: inline-block;
+	padding: 0.5em;
+	box-sizing: content-box;
+	border-radius: 10px;
+}
+
+h4{
+	color: var(--prim);
+}
+
+p{
+	color: white;
+	font-size: 15pt;
+	border-radius: 10px;
+	padding: 1em;
 }
 
 a{
