--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@
 	--quat: #FFFFFF;
 	/*--quin: #FD9BD6;*/
 	--quin: #16F3F3;
+	--scrollbar-hover: #5D6471;
+	--scrollbar-background: #000917;
 }
 
 #titleArea{
@@ -64,7 +66,7 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
 }
 
@@ -119,7 +121,7 @@ h4{
 }
 
 p{
-	color: white;
+	color: var(--prim);
 	font-size: 15pt;
 	border-radius: 10px;
 	padding: 1em;
@@ -149,6 +151,27 @@ html{
 a:hover{
 	/*filter: invert(1);*/
 	background: var(--quin);
+}
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background-color: var(--scrollbar-background);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background-color: var(--scnd);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background-color: var(--scrollbar-hover);
 }
 
 @media only screen and (max-width: 900px){
