--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 :root{
 	/*--prim: #242F40;*/
 	--prim: #202937;
-	--scnd: #7D8491;
+	--scnd: #9196A1;
 	--tert: #FD9BD6;
 	--quat: #FFFFFF;
 	/*--quin: #FD9BD6;*/
